PA_Education/TestMenifest/force-app/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>