PA_Education/TestMenifest/force-app/main/default/objects/Contact/fields/AccName__c.field-meta.xml
<CustomField>
    <fullName>AccName__c</fullName>
    <formula>Account.Name</formula>
    <label>AccName</label>
    <type>Text</type>
</CustomField>