PA_Education/TestMenifest/force-app/main/default/objects/Contact/fields/DetailAddress__c.field-meta.xml
<CustomField>
    <fullName>DetailAddress__c</fullName>
    <label>상세 주소</label>
    <length>250</length>
    <type>Text</type>
</CustomField>