PA_Education/TestMenifest/force-app/main/default/objects/Contact/fields/Full_Name1__c.field-meta.xml
<CustomField>
    <fullName>Full_Name1__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>