PA_Education/TestMenifest/force-app/main/default/objects/Contact/fields/GoogleContactId__c.field-meta.xml
<CustomField>
    <fullName>GoogleContactId__c</fullName>
    <label>GoogleContactId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>