PA_Education/TestMenifest/force-app/main/default/objects/Contact/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PR_A</fullName>
            </value>
            <value>
                <fullName>PR_B</fullName>
            </value>
            <value>
                <fullName>PR_C</fullName>
            </value>
            <value>
                <fullName>PR_D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>