PA_Education/TestMenifest/force-app/main/default/objects/Contact/fields/InfoSource__c.field-meta.xml
<CustomField>
    <fullName>InfoSource__c</fullName>
    <label>정보 소스</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>직접연락</fullName>
            </value>
            <value>
                <fullName>행사/이벤트</fullName>
            </value>
            <value>
                <fullName>소개</fullName>
            </value>
            <value>
                <fullName>웹</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>