PA_Education/TestMenifest/force-app/main/default/objects/Contact/fields/resigned__c.field-meta.xml
<CustomField>
    <fullName>resigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>퇴사</label>
    <type>Checkbox</type>
</CustomField>