PA_Education/TestMenifest/force-app/main/default/objects/Contact/fields/StateDistrict__c.field-meta.xml
<CustomField>
    <fullName>StateDistrict__c</fullName>
    <label>기본 주소</label>
    <length>220</length>
    <type>Text</type>
</CustomField>