PA_Education/TestMenifest/force-app/main/default/objects/Contact/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <label>우편번호</label>
    <length>10</length>
    <type>Text</type>
</CustomField>